--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 :root {
 	--base-color-echo-yellow: #FFD130;
 	--base-color-echo-gray: #1D1D1B;
+	--base-color-echo-muted: #696969;
 	--base-color-echo-white: #FFFFFF;
 	--base-color-echo-black: #000000;
 
@@ -76,7 +77,7 @@ html, body, #root {
 }
 
 .circle-progress-bar {
-	stroke: var(--base-color-echo-gray);
+	stroke: var(--base-color-echo-muted);
 	opacity: 0.2;
 }
 
