--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,7 @@ html, body, #root {
 @theme {
 	--color-echo-yellow-500: var(--base-color-echo-yellow);
 	--color-echo-gray-500: var(--base-color-echo-gray);
+	--color-echo-muted-500: var(--base-color-echo-muted);
 	--color-echo-white-500: var(--base-color-echo-white);
 	--color-echo-black-500: var(--base-color-echo-black);
 }
